[project]
name = "test-jupyter-git"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ebal5", email = "6240240+ebal5@users.noreply.github.com" }
]
dependencies = [
    "jupyter-server>=2.13.0",
    "jupyterhub>=4.1.3",
    "jupyterlab>=4.1.5",
    "jupytext>=1.16.1",
    "matplotlib>=3.8.3",
    "scikit-learn>=1.4.1.post1",
    "seaborn>=0.13.2",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "nbstripout>=0.7.1",
    "ipykernel>=6.29.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "test_jupyter_git:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_jupyter_git"]
